tests/neg/lexer_unknown_byte.baa
// RUN: expect-fail
// EXPECT: بايت غير معروف

صحيح الرئيسية() {
    @
    إرجع ٠.
}
